# Minecraft2D

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Constants.h  GameState.h  Utils.h
include/blocks/: Block.h  DiamondOre.h  Dirt.h  EmeraldOre.h  GoldOre.h  Grass.h  IronOre.h  Leaves.h  OakWood.h  Stone.h
include/blocks/utils/: CollisionType.h
include/handlers/: EventHandler.h  InputHandler.h  RespawnHandler.h  SpriteHandler.h
include/inventory/: Healthbar.h  Hotbar.h
include/inventory/crafting/: CraftItem.h  DiamondPickaxe.h  DiamondSword.h  GoldPickaxe.h  GoldSword.h  IronPickaxe.h  IronSword.h  StonePickaxe.h  StoneSword.h  WoodPickaxe.h  WoodSword.h
include/inventory/items/: DiamondItem.h  DirtItem.h  EmeraldItem.h  GoldItem.h  IronItem.h  Item.h  StoneItem.h  WoodItem.h
include/inventory/items/swords/: DiamondSwordItem.h  GoldSwordItem.h  IronSwordItem.h  StoneSwordItem.h  SwordItem.h  WoodSwordItem.h
include/inventory/items/tools/: DiamondPickaxeItem.h  GoldPickaxeItem.h  IronPickaxeItem.h  PickaxeItem.h  StonePickaxeItem.h  WoodPickaxeItem.h
include/screens/: CraftScreen.h  GameOverScreen.h  RespawnScreen.h  Screen.h
include/sprites/: AutomatedSprite.h  GameSprite.h  GroundSprite.h  Steve.h
include/sprites/hostiles/: Creeper.h  Zombie.h
include/sprites/utils/: Direction.h
include/terrain/: Tree.h  ValueNoise.h  WorldGenerator.h
src/: Utils.cpp
src/blocks/: Block.cpp  DiamondOre.cpp  Dirt.cpp  EmeraldOre.cpp  GoldOre.cpp  Grass.cpp  IronOre.cpp  Leaves.cpp  OakWood.cpp  Stone.cpp
src/blocks/utils/: CollisionType.cpp
src/handlers/: EventHandler.cpp  InputHandler.cpp  RespawnHandler.cpp  SpriteHandler.cpp
src/inventory/: Healthbar.cpp  Hotbar.cpp
src/inventory/crafting/: CraftItem.cpp  DiamondPickaxe.cpp  DiamondSword.cpp  GoldPickaxe.cpp  GoldSword.cpp  IronPickaxe.cpp  IronSword.cpp  StonePickaxe.cpp  StoneSword.cpp  WoodPickaxe.cpp  WoodSword.cpp
src/inventory/items/: DiamondItem.cpp  DirtItem.cpp  EmeraldItem.cpp  GoldItem.cpp  IronItem.cpp  Item.cpp  StoneItem.cpp  WoodItem.cpp
src/inventory/items/swords/: DiamondSwordItem.cpp  GoldSwordItem.cpp  IronSwordItem.cpp  StoneSwordItem.cpp  SwordItem.cpp  WoodSwordItem.cpp
src/inventory/items/tools/: DiamondPickaxeItem.cpp  GoldPickaxeItem.cpp  IronPickaxeItem.cpp  PickaxeItem.cpp  StonePickaxeItem.cpp  WoodPickaxeItem.cpp
src/screens/: CraftScreen.cpp  GameOverScreen.cpp  RespawnScreen.cpp  Screen.cpp
src/sprites/: AutomatedSprite.cpp  GameSprite.cpp  GroundSprite.cpp  Steve.cpp
src/sprites/hostiles/: Creeper.cpp  Zombie.cpp
src/terrain/: Tree.cpp  ValueNoise.cpp  WorldGenerator.cpp
